dark mode button fix

--- a/blog/src/App.css
+++ b/blog/src/App.css
@@ -493,15 +493,6 @@ input[type="date"]::-webkit-calendar-picker-indicator {
     margin-top: 20px;
 }
 
-.icons {
-    margin-top: 5px;
-    display: flex;
-    border: 1px solid var(--primary-color-font);
-    border-radius: 35px;
-    width: 85px;
-    cursor: pointer;
-}
-
 .fa-moon,
 .fa-sun {
     font-size: 30px;
@@ -582,6 +573,7 @@ input[type="date"]::-webkit-calendar-picker-indicator {
     0% {
         -webkit-transform: rotate(0deg);
     }
+
     100% {
         -webkit-transform: rotate(360deg);
     }
@@ -591,6 +583,7 @@ input[type="date"]::-webkit-calendar-picker-indicator {
     0% {
         transform: rotate(0deg);
     }
+
     100% {
         transform: rotate(360deg);
     }
@@ -707,96 +700,125 @@ input[type="date"]::-webkit-calendar-picker-indicator {
         left: 91%;
         top: 426px;
     }
+
     .theme-switch {
-        margin-right: 58px;
+        margin-right: 2px;
+        width: 100px;
+        height: 50px;
+        border-radius: 33px;
     }
-    .icons {
-        width: 114px;
-        height: 56px;
-    }
+
     .fa-moon,
     .fa-sun {
-        font-size: 45px;
+        font-size: 38px;
     }
+
+    .fa-moon {
+        right: 24px;
+    }
+
+    .fa-sun {
+        left: 22px;
+    }
+
     .nav__link,
     .button {
         font-size: 18px;
     }
+
     .info__mark,
     .info__item,
     .actions__btn {
         font-size: 20px;
     }
+
     p {
         font-size: 28px;
         line-height: 42px;
     }
+
     .saying {
         font-size: 35px;
         line-height: 50px;
     }
+
     .footer__link {
         font-size: 50px;
     }
+
     /* modal */
     .inputs__container {
         font-size: 24px;
     }
+
     .input {
         font-size: 24px;
     }
+
     .input__data {
         font-size: 24px;
         padding-left: 136px;
     }
+
     .input__button {
         width: 130px;
         font-size: 24px;
         bottom: 3px;
         line-height: 0px;
     }
+
     .textarea {
         font-size: 24px;
     }
+
     /* delete modal */
     .modal__container--small {
         width: 875px;
     }
+
     /* page404 */
     .error__info {
         font-size: 30px;
         margin-top: 100px;
     }
+
     .error__box {
         position: relative;
         height: 1045px;
         background-position: center;
     }
+
     /* login page styling */
     .login {
         width: 1280px;
         height: 1086px;
     }
+
     .login__container {
         top: 100px;
         width: 400px;
         height: 600px;
     }
+
     .login__title {
         font-size: 55px;
     }
+
     .login__error {
         font-size: 24px;
     }
+
     .icon-user,
     .icon-lock-open-alt {
         font-size: 36px;
     }
+
     .login__input {
         width: 275px;
         height: 60px;
         font-size: 28px;
     }
+
     .login__button {
         height: 75px;
         font-size: 36px;
@@ -810,159 +832,207 @@ input[type="date"]::-webkit-calendar-picker-indicator {
         left: 691px;
         top: 426px;
     }
+
     .theme-switch {
-        margin-right: 115px;
+        margin-right: 2px;
+        width: 126px;
+        height: 64px;
+        border-radius: 33px;
     }
-    .icons {
-        width: 170px;
-        height: 85px;
-    }
+
+    
+
     .fa-moon,
     .fa-sun {
-        font-size: 72px;
+        font-size: 48px;
     }
+
+    .fa-moon {
+        right: 32px;
+    }
+
+    .fa-sun {
+        left: 30px;
+    }
+
     .nav__link {
         font-size: 26px;
     }
+
     .add__container {
         margin-bottom: 130px;
     }
+
     .button {
         width: 350px;
         height: 90px;
         font-size: 26px;
     }
+
     .fas {
         font-weight: 500;
     }
+
     .fa-plus::before {
         font-size: 36px;
         font-weight: 700;
     }
+
     .title {
         font-size: 60px;
         margin-left: 130px;
         margin-right: 130px;
         margin-bottom: 60px;
     }
+
     .info__container {
         margin-bottom: 80px;
     }
+
     .info__mark,
     .info__item {
         font-size: 28px;
     }
+
     .actions__container {
         margin-bottom: 40px;
     }
+
     .actions__btn {
         font-size: 28px;
     }
+
     p {
         font-size: 40px;
         line-height: 60px;
     }
+
     .saying {
         font-size: 42px;
         line-height: 50px;
     }
+
     .footer__link {
         font-size: 60px;
     }
+
     /* modal */
     .modal__container {
         height: 1500px;
     }
+
     .modal__container--small {
         height: 480px;
         padding: 48px;
     }
+
     .modal__content {
         font-size: 33px;
     }
+
     .inputs__container {
         font-size: 36px;
     }
+
     .input {
         width: 850px;
         height: 70px;
         font-size: 36px;
     }
+
     .input__mb {
         margin-bottom: 50px;
     }
+
     .icon-cancel-circled {
         font-size: 42px;
         right: 46px;
     }
+
     .input__error {
         font-size: 32px;
         width: 800px;
     }
+
     .input__upload {
         flex-wrap: nowrap;
     }
+
     .input__data {
         width: 850px;
         height: 70px;
         font-size: 36px;
         padding-left: 220px;
     }
+
     .input__button {
         width: 200px;
         height: 70px;
         font-size: 36px;
         bottom: 0px;
     }
+
     .textarea {
         font-size: 36px;
         height: 400px;
         line-height: 55px;
     }
+
     .modal__buttons {
         margin-top: 75px;
     }
+
     .button--pink {
         margin-left: 153px;
     }
+
     /* page404 */
     .error__box {
         position: relative;
         height: 262vh;
         background-position: left;
     }
+
     .error__info {
         font-size: 50px;
         margin-top: 300px;
     }
+
     .error__message {
         font-size: 50px;
     }
+
     /* login page styling */
     .login {
         width: 1280px;
         height: 2179px;
     }
+
     .login__container {
         top: 400px;
         width: 700px;
         height: 900px;
     }
+
     .login__title {
         font-size: 90px;
     }
+
     .login__error {
         font-size: 36px;
     }
+
     .icon-user,
     .icon-lock-open-alt {
         font-size: 52px;
     }
+
     .login__input {
         width: 450px;
         height: 90px;
         font-size: 40px;
     }
+
     .login__button {
         height: 90px;
         font-size: 40px;
